--- a/seleniumGRID/docker-compose.yml
+++ b/seleniumGRID/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_MAX_SESSIONS=5  # Số lượng session tối đa cho mỗi node
-      - SE_NODE_MAX_INSTANCES=5 
+      - SE_NODE_MAX_SESSIONS=10  # Số lượng session tối đa cho mỗi node
+      - SE_NODE_MAX_INSTANCES=10 
 
   firefox:
     image: selenium/node-firefox:beta
@@ -21,8 +21,8 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_MAX_SESSIONS=5  # Số lượng session tối đa cho mỗi node
-      - SE_NODE_MAX_INSTANCES=5 
+      - SE_NODE_MAX_SESSIONS=10  # Số lượng session tối đa cho mỗi node
+      - SE_NODE_MAX_INSTANCES=10 
   selenium-hub:
     image: selenium/hub:latest
     container_name: selenium-hub
